--- a/templates/index.html
+++ b/templates/index.html
@@ -259,10 +259,7 @@
     <!-- HERO SECTION -->
     <div class="hero">
       <div class="hero-text">
-        <h1>
-          <span>Trường Mầm non</span>
-          <span>Hoa Hướng Dương</span>
-        </h1>
+        <h1>Trường Mầm non <br> Hoa Hướng Dương</h1>
         <a href="{% url 'meals:meal_bulk_create' %}" class="cta-btn">Nhập Dữ liệu Bữa Ăn Ngay</a>
       </div>
       <div class="hero-image">
