--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -104,7 +104,7 @@
       }
 
       const statsURL = "{% url 'meals:statistics' %}";
-      const debtURL  = "{% url 'admin:meals_studentpayment_changelist' %}";
+      const debtURL  = "{% url 'meals:student_payment_edit' %}";
       const statsText= "{% trans 'Thống kê' %}";
       const debtText = "{% trans 'Chỉnh sửa công nợ' %}";
 
