--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -107,6 +107,20 @@
       background-color: #14394b !important;
       color:            #fff     !important;
       text-transform:   uppercase;
+      width: 300px !important;
+      table-layout: fixed !important;
+    }
+    #content-main ,
+    #content-main {
+    border-left: 1px solid #d2d2d49f !important;  /* Viền trái */
+    border-right: 1px solid #d2d2d49f !important; /* Viền phải */
+    border-top: none !important;             /* Không có viền trên */
+    border-bottom: none !important;          /* Không có viền dưới */
+    margin: 0 !important;
+    width: 100% !important;  /* Đảm bảo bảng chiếm hết chiều rộng */
+    /* Tắt link và hover effect */
+      /* Tắt link và hover effect */
+    
     }
     /* Tắt link và hover effect */
     #content-main .app-meals.module table caption a.section,
