--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -107,6 +107,7 @@
       background-color: #14394b !important;
       color:            #fff     !important;
       text-transform:   uppercase;
+      width: 284px !important;
       table-layout: fixed !important;
     }
     #content-main ,
