--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,4 +1,4 @@
-={# project_root/templates/admin/index.html #}
+{# project_root/templates/admin/index.html #}
 {% extends "admin/index.html" %}
 {% load i18n %}
 
